search tab modified ,enter button removed.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-sm-6 "><h1 class="msg"> HOW CAN WE HELP?</h1></div></div>
     <div class="row justify-content-center"><div class="col-12 col-sm-6 "><form class="d-flex">
-        <input type="search" placeholder="Search"  class="search" id="searchInput" ><button style="background: none; border: none;padding: 0;font-size: 16px;cursor: pointer;" >Enter</button></form>
+        <input type="search" placeholder="Search"  class="search" id="searchInput" ></form>
         </div></div>
     </div>
     
