--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="centerpart">
         <div class="row justify-content-center">
             <div class="col-12 col-sm-6 "><h1 class="msg"> HOW CAN WE HELP?</h1></div></div>
-    <div class="row justify-content-center"><div class="col-12 col-sm-6 "><form class="d-flex">
+    <div ><form class="d-flex">
         <input type="search" placeholder="Search"  class="search" id="searchInput" ></form>
-        </div></div>
+        </div>
     </div>
     
         <div class="container">
